# three-flatland

./: .gitignore  .gitmodules  .madgerc  .mergify.yml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .size-limit.cjs  .size-limit.json  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  lefthook.yml  microfrontends.json  nx.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.base.ts  vitest.config.ts  vitest.setup.ts  vitest.workspace.ts
.changeset/: CLAUDE.md  README.md  alpha-release.md  alphamap-readme.md  atlas-readme.md  auto-alpha-release-3s2qcns.md  auto-create-three-flatland-3rv9l4z.md  auto-three-flatland-3rvfleo.md  auto-three-flatland-3rvh0ig.md  auto-three-flatland-3rvrwel.md  auto-three-flatland-3rvxmcp.md  auto-three-flatland-3rvy76u.md  auto-three-flatland-3rvyfg3.md  auto-three-flatland-3rvyfsx.md  auto-three-flatland-3rvyk6q.md  auto-three-flatland-3rvylz6.md  auto-three-flatland-3rvyow0.md  auto-three-flatland-3rwolhx.md  auto-three-flatland-3rx6pid.md  auto-three-flatland-3rx8b9d.md  auto-three-flatland-3rx8grd.md  auto-three-flatland-3rxxrrc.md  auto-three-flatland-3ry4ysa.md  auto-three-flatland-3ry6czq.md  auto-three-flatland-3ryir4v.md  auto-three-flatland-3ryk05y.md  (+85 more)
tools/codelens-service/sidecar/: .gitignore  Cargo.toml
tools/codelens-service/sidecar/src/: db.rs  framing.rs  fsutil.rs  glob.rs  handlers.rs  hash.rs  id.rs  lib.rs  main.rs  model.rs  parse.rs  position.rs  rpc.rs  scan.rs
tools/codelens-service/sidecar/tests/: golden.rs  integration.rs
(+1624 files in other folders)
