[package]
name = "codelens-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "codelens_service"
path = "src/lib.rs"

[[bin]]
name = "codelens-service"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tree-sitter = "0.26.10"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3.14"
